--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -10,23 +10,29 @@
 </head>
 
 <body>
+<div id="vue_app">
 
 <div class=bag >
-    <img src="/images/bag.png" style="margin-top: 50%;"  alt="Bag">
+    <img v-bind:src="src" style="margin-top: 50%;"  alt="Bag">
 </div>
 
 <div class="progress">
     <div class=container>
-        <div class="bar" style="width: 100%;">
+        <div v-bind:style="{width:count+'%'}" class="bar" style="width: 100%;">
         </div>
     </div>
 </div>
 
 <div class=buttons>
-    <button type="button" id="Btn-1" style= " padding: 15px 32px" ><b style='font-size: 17px'>Punch</b></button>
-    <button type="button" id="Btn-2" style= "margin-left:61px; padding: 15px 32px" ><b style='font-size: 17px'>Reset</b></button>
+    <button v-on:click="punch" type="button" id="Btn-1" style= "padding: 15px 32px" v-bind:disabled=disab ><b style='font-size: 17px'>Punch</b></button>
+    <button v-on:click="reset_punch" type="button" id="Btn-2" style= "margin-left:61px; padding: 15px 32px" ><b style='font-size: 17px'>Reset</b></button>
 </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+
 <script src='/scripts/jquery.js'></script>
-<script src='/scripts/scripy.js'></script>
+<!--<script src='/scripts/scripy.js'></script> {% endcomment %} -->
+<script src='/scripts/script_vue.js'></script>
+
 </body>
 </html>
